<resources>
    <string name="app_name">railJourney</string>
    <string name="about">About Us</string>
    <string name="close_popup">Close</string>

    <string name="about_us">railJourney provides you a easy way to access all information about Indian Railway.
       \n\nPlease send us your suggestion on how to improve our services.
        \nGet in touch with us at \n\ndroiddevgeeks@gmail.com</string>

    <!--helpline number-->

    <string name="helpline1"><u><a>1800-111-322</a> </u></string>
    <string name="helpline2"><u><a>1800-111-139</a></u></string>
    <string name="helpline3"><u><a>138</a></u></string>
    <string name="helpline4"><u><a>139</a></u></string>
    <string name="helpline5"><u><a>58888</a></u></string>
    <string name="helpline6"><u>Tweeter</u></string>


    <!--navigation drawer-->
    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="travel_class">Select Class</string>
    <string-array name="travel_class_array">
        <item>AC Chair Car</item>
        <item>First AC</item>
        <item>Second AC</item>
        <item>Third AC</item>
        <item>3AC Economy</item>
        <item>Sleeper Class</item>
        <item>First Class</item>
        <item>2nd Seating</item>
    </string-array>

    <string-array name="travel_class_value">
        <item>CC</item>
        <item>1A</item>
        <item>2A</item>
        <item>3A</item>
        <item>AC3</item>
        <item>SL</item>
        <item>FC</item>
        <item>2S</item>
    </string-array>

    <string name="traveller_age">Select age</string>
    <string-array name="traveller_age_array">
        <item>Child(5 to 11)</item>
        <item>Adult ( 12 and above)</item>
        <item>Senior Citizen Female( 58 and above)</item>
        <item>Senior Citizen Male( 60 and above)</item>
    </string-array>
    <string-array name="traveller_age_value">
        <item>5</item>
        <item>16</item>
        <item>58</item>
        <item>60</item>
    </string-array>

    <string name="booking_quota">Quota</string>
    <string-array name="booking_quota_array">
        <item>General</item>
        <item>Tatkal</item>
        <item>Premium Tatkal</item>
        <item>Ladies Quota</item>
        <item>Defence Quota</item>
        <item>Handicapped Quota</item>

    </string-array>

    <string-array name="booking_quota_value">
        <item>GN</item>
        <item>TQ</item>
        <item>PT</item>
        <item>LD</item>
        <item>DF</item>
        <item>HP</item>
    </string-array>

    <string-array name="time_range">
        <item>Within 2 Hours</item>
        <item>Within 4 Hours</item>
        <item>Within 6 Hours</item>
        <item>Within 8 Hours</item>
        <item>Within 10 Hours</item>
    </string-array>

    <string-array name="time_range_vlaue">
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>8</item>
    </string-array>

    <!--train live status-->
    <string name="live_train_status">Get Status</string>

    <!--train roue-->
    <string name="train_route">Get Route</string>


    <!--fare string-->
    <string name="fare_train_name_number">Train Name</string>
    <string name="fare_source">Source:</string>
    <string name="fare_destination">Destination:</string>
    <string name="fare_station_name_code">Station name</string>
    <string name="source_station_name_code">Source station</string>
    <string name="destination_station_name_code">Destination station</string>
    <string name="fare_DOJ">DOJ:</string>
    <string name="fare_date_of_journey">dd-mm-yyyy</string>
    <string name="fare_get_fare">Get Fare</string>
    <string name="fare_travel_class">Class:</string>
    <string name="fare_age">Age:</string>
    <string name="fare_booking_quota">Quota:</string>

    <!--mobile ads-->
    <string name="title_activity_second_activiy">Interstitial</string>
    <string name="msg_welcome">Welcome to Admob. Click on the below button to launch the Interstitial ad.</string>
    <string name="btn_fullscreen_ad">Show Fullscreen Ad</string>
    <string name="app_key">op5u4664</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-2830547288515835/6067869703</string>
    <string name="interstitial_full_screen">ca-app-pub-2830547288515835/6868448500</string>

</resources>
